--- a/style.css
+++ b/style.css
@@ -1,140 +1,179 @@
-div#container {
-    width: 100%;
-    display: block;
-}
-div#row-1 {
-    background-color: #3A3033;
-    width: 100%;
-}
-#header {
-    display: inline-block;
-    width: 100%;
-    margin: 0%;
-}
-img {
-    width: 6%;
-}
-#nav {
-    display: inherit;
-    margin-left: 25%;
-    margin-left: 25%;
-    margin-top: -7%;
-}
-li a: hover {
-    border: solid 2px white;
-}
-li {
-    display: inline-block;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 0;
-    margin-top: 0;
-}
-ul li a {
-    list-style: none;
-    color: #E2D9DC;
-    display: inline-block;
-    text-decoration: none;
-    font-size: 0.8em;
-}
-body {
-    background-color: black;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-}
-#icons {
-    margin-top: -%;
-}
-#icons li {
-    color: rgba(255, 255, 255, 0.51);
-    float: right;
-    border: solid 1px transparent;
-    padding: 1%;
-}
-h1 {
-    font-size: 3em;
-    color: white;
-    text-align: center;
-    font-weight: 200;
-    ;
-    padding: 1%;
-}
-#title {
-    padding: 10%;
-    font-family: 'Teko', sans-serif;
-}
-#title p {
-    color: white;
-    text-align: center;
-    padding: 1%;
-    font-weight: lighter;
-}
-#title button {
-    margin-left: 40%;
-    margin-right: 50%;
-    width: 20%;
-    padding-left: 2%;
-    padding-right: 2%;
-    font-size: 0.8em;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
-}
-#row-2 {
-    width: 100%;
-}
-div#highlighted-right {
-    width: 50%;
-    float: right;
-    background-color: #FF0047;
-    height: auto;
-}
-div#highlighted-left {
-    background-color: white;
-    float: left;
-    width: 50%;
-    height: auto;
-}
-#text {
-    padding: 20%;
-    color: white;
-    font-size: 0.7em;
-    margin-top: 20%;
-}
-#blank {
-    background-color: aquamarine;
-    height: 30%;
-    float: left;
-    width: 50%;
-}
-.button {
-    color: white;
-    background-color: #FF0047;
-    padding: 1% 4%;
-    text-decoration: none;
-}
-.row {
-    display: block;
-}
-#history {
-    display: block;
-    width: 50%;
-    float: left;
-    background-color: white;
-    line-height: 2em;
-    height: 50%;
-}
-#history p {
-    padding-left: 3%;
-}
-#sage {
-    width: 50%;
-    float: right;
-    background-color: white;
-}
-#sage img {
-    width: 50%;
-    align-content: center;
-}
+    div#container {
+        width: 100%;
+        display: block;
+    }
+    div#row-1 {
+        background-color: #3A3033;
+        width: 100%;
+    }
+    #header {
+        display: inline-block;
+        width: 100%;
+        margin: 0%;
+    }
+    img {
+        width: 6%;
+    }
+    #nav {
+        display: inherit;
+        margin-left: 25%;
+        margin-left: 25%;
+        margin-top: -7%;
+    }
+    li a: hover {
+        border: solid 2px white;
+    }
+    li {
+        display: inline-block;
+        padding-left: 2%;
+        padding-right: 2%;
+        padding-top: 0;
+        margin-top: 0;
+    }
+    ul li a {
+        list-style: none;
+        color: #E2D9DC;
+        display: inline-block;
+        text-decoration: none;
+        font-size: 0.8em;
+    }
+    body {
+        background-color: black;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        display: block;
+    }
+    #icons {
+        margin-top: -%;
+    }
+    #icons li {
+        color: rgba(255, 255, 255, 0.51);
+        float: right;
+        border: solid 1px transparent;
+        padding: 1%;
+    }
+    h1 {
+        font-size: 3em;
+        color: white;
+        text-align: center;
+        font-weight: 200;
+        ;
+        padding: 1%;
+    }
+    #title {
+        padding: 10%;
+        font-family: 'Teko', sans-serif;
+    }
+    #title p {
+        color: white;
+        text-align: center;
+        padding: 1%;
+        font-weight: lighter;
+    }
+    #title button {
+        margin-left: 40%;
+        margin-right: 50%;
+        width: 20%;
+        padding-left: 2%;
+        padding-right: 2%;
+        font-size: 0.8em;
+        padding-top: 0.5%;
+        padding-bottom: 0.5%;
+    }
+    #row-2 {
+        width: 100%;
+    }
+    div#highlighted-right {
+        width: 50%;
+        float: right;
+        background-color: #FF0047;
+        height: auto;
+    }
+    div#highlighted-left {
+        background-color: white;
+        float: left;
+        width: 50%;
+        height: auto;
+    }
+    #text {
+        padding: 20%;
+        color: white;
+        font-size: 0.7em;
+        margin-top: 20%;
+    }
+    .button {
+        color: white;
+        background-color: #FF0047;
+        padding: 1% 4%;
+        text-decoration: none;
+    }
+    .row {
+        display: block;
+    }
+    #history {
+        display: block;
+        width: 50%;
+        float: left;
+        background-color: white;
+        line-height: 2em;
+        height: 39em;
+    }
+    #history p {
+        padding-left: 3%;
+    }
+    #sage {
+        width: 50%;
+        float: right;
+        background-color: white;
+        height: 39em;
+    }
+    #sage img {
+        width: 30%;
+        align-content: center;
+    }
+    #blank {
+        height: 12em;
+    }
+    #blank {
+        width: 100%;
+    }
+    #blank #gray1 {
+        width: 24%;
+        float: left;
+        height: 12em;
+    }
+    #blank #gray2 {
+        height: 50%;
+        background-color: #352B2F;
+        height: 12em;
+    }
+    #blank #grey1 {
+        width: 30% height: 50%;
+        background-color: #3A3033;
+        float: right;
+        height: 12em;
+    }
+    #projects p {
+        padding: 9%;
+        padding-bottom: 7%;
+        margin-left: 6%
+    }
+    #projects h2 {
+        color: black;
+        text-align: left;
+        padding: 5%;
+        margin-left: 9%
+    }
+    #discover {
+        width: 100%;
+    }
+    #discover #button {
+        padding: 0 8%;
+    }
+    #2180 {
+        width: 100%;
+    }
+    #2180 img {
+        width: 2em;
+    }
