--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@
         color: white;
         text-align: center;
         font-weight: 200;
-        ;
         padding: 1%;
+        margin-left: -4%;
     }
     #title {
         padding: 10%;
@@ -83,21 +83,22 @@
     }
     #row-2 {
         width: 100%;
+        height: auto;
     }
     div#highlighted-right {
         width: 50%;
         float: right;
         background-color: #FF0047;
-        height: auto;
+        height: 37.2em;
     }
     div#highlighted-left {
         background-color: white;
         float: left;
         width: 50%;
-        height: auto;
+        height: 37.2em;
     }
     #text {
-        padding: 20%;
+        padding: 15%;
         color: white;
         font-size: 0.7em;
         margin-top: 20%;
@@ -112,21 +113,20 @@
         display: block;
     }
     #history {
-        display: block;
         width: 50%;
+        display: block;
         float: left;
         background-color: white;
         line-height: 2em;
-        height: 39em;
     }
     #history p {
         padding-left: 3%;
     }
     #sage {
+        display: block;
         width: 50%;
         float: right;
         background-color: white;
-        height: 39em;
     }
     #sage img {
         width: 30%;
@@ -155,21 +155,27 @@
         height: 12em;
     }
     #projects p {
-        padding: 9%;
-        padding-bottom: 7%;
-        margin-left: 6%
+        padding: 2em;
+        padding-bottom: 2em;
+        margin-left: 3em;
     }
     #projects h2 {
         color: black;
         text-align: left;
-        padding: 5%;
-        margin-left: 9%
+        margin-left: 4em;
     }
     #discover {
-        width: 100%;
+        background-color: white;
+    }
+    #discover p {
+        margin-left: 3em;
+        margin-bottom: 0em;
     }
     #discover #button {
         padding: 0 8%;
+        margin: 3em 5em 0 4em;
+        background-color: red;
+        height: 2.5em;
     }
     #2180 {
         width: 100%;
