--- a/style.css
+++ b/style.css
@@ -1,195 +1,214 @@
-    div#container {
-        width: 100%;
-        display: block;
-    }
-    div#row-1 {
-        background-color: #3A3033;
-        width: 100%;
-    }
-    #header {
-        display: inline-block;
-        width: 100%;
-        margin: 0%;
-    }
-    img {
-        width: 6%;
-    }
-    #nav {
-        display: inherit;
-        margin-left: 25%;
-        margin-left: 25%;
-        margin-top: -7%;
-    }
-    li a: hover {
-        border: solid 2px white;
-    }
-    li {
-        display: inline-block;
-        padding-left: 2%;
-        padding-right: 2%;
-        padding-top: 0;
-        margin-top: 0;
-    }
-    ul li a {
-        list-style: none;
-        color: #E2D9DC;
-        display: inline-block;
-        text-decoration: none;
-        font-size: 0.8em;
-    }
-    body {
-        background-color: black;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        display: block;
-    }
-    #icons {
-        margin-top: -%;
-    }
-    #icons li {
-        color: rgba(255, 255, 255, 0.51);
-        float: right;
-        border: solid 1px transparent;
-        padding: 1%;
-    }
-    h1 {
-        font-size: 3em;
-        color: white;
-        text-align: center;
-        font-weight: 200;
-        padding: 1%;
-        margin-left: -4%;
-    }
-    #title {
-        padding: 10%;
-        font-family: 'Teko', sans-serif;
-    }
-    #title p {
-        color: white;
-        text-align: center;
-        padding: 1%;
-        font-weight: lighter;
-    }
-    #title button {
-        margin-left: 40%;
-        margin-right: 50%;
-        width: 20%;
-        padding-left: 2%;
-        padding-right: 2%;
-        font-size: 0.8em;
-        padding-top: 0.5%;
-        padding-bottom: 0.5%;
-    }
-    #row-2 {
-        width: 100%;
-        height: auto;
-    }
-    div#highlighted-right {
-        width: 50%;
-        float: right;
-        background-color: #FF0047;
-        height: 37.2em;
-    }
-    div#highlighted-left {
-        background-color: white;
-        float: left;
-        width: 50%;
-        height: 37.2em;
-    }
-    #text {
-        padding: 15%;
-        color: white;
-        font-size: 0.7em;
-        margin-top: 20%;
-    }
-    #history .button {
-        color: white;
-        background-color: #FF0047;
-        padding: 1% 4%;
-        text-decoration: none;
-        margin-left: 4em;
-    }
-    .row {
-        display: block;
-    }
-    #history {
-        width: 50%;
-        display: block;
-        float: left;
-        background-color: white;
-        height: 39em;
-    }
-    #history h2 {
-        margin: 2em 3em 0 3em;
-    }
-    #history p {
-        padding: 10%;
-        margin: 2em auto;
-        font-size: 0.9em;
-        margin-right: 4em;
-    }
-    #sage {
-        display: block;
-        width: 50%;
-        float: right;
-        background-color: white;
-        height: 39em;
-    }
-    #sage img {
-        width: 55%;
-        align-content: center;
-        margin: 2em 25%
-    }
-    #blank {
-        height: 12em;
-    }
-    #blank {
-        width: 100%;
-    }
-    #blank #gray1 {
-        width: 24%;
-        float: left;
-        height: 12em;
-    }
-    #blank #gray2 {
-        height: 50%;
-        background-color: #352B2F;
-        height: 12em;
-    }
-    #blank #grey1 {
-        width: 30% height: 50%;
-        background-color: #3A3033;
-        float: right;
-        height: 12em;
-    }
-    #projects p {
-        padding: 2em;
-        padding-bottom: 2em;
-        margin-left: 3em;
-    }
-    #projects h2 {
-        color: black;
-        text-align: left;
-        margin-left: 4em;
-    }
-    #discover {
-        background-color: white;
-    }
-    #discover p {
-        margin-left: 3em;
-        margin-bottom: 0em;
-    }
-    #discover #button {
-        padding: 0 8%;
-        margin: 3em 5em 0 4em;
-        background-color: #FF0047;
-        height: 2.5em;
-        color: white;
-    }
-    #2180 {
-        width: 100%;
-    }
-    #2180 img {
-        width: 2em;
-    }
+div#container {
+    width: 100%;
+    display: block;
+}
+div#row-1 {
+    background-color: #3A3033;
+    width: 100%;
+}
+#header {
+    display: inline-block;
+    width: 100%;
+    margin: 0%;
+}
+img {
+    width: 6%;
+}
+#nav {
+    display: inherit;
+    margin-left: 25%;
+    margin-left: 25%;
+    margin-top: -7%;
+}
+li a: hover {
+    border: solid 2px white;
+}
+li {
+    display: inline-block;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 0;
+    margin-top: 0;
+}
+ul li a {
+    list-style: none;
+    color: #E2D9DC;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 0.8em;
+}
+body {
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: block;
+}
+#icons {
+    margin-top: -%;
+}
+#icons li {
+    color: rgba(255, 255, 255, 0.51);
+    float: right;
+    border: solid 1px transparent;
+    padding: 1%;
+}
+h1 {
+    font-size: 3em;
+    color: white;
+    text-align: center;
+    font-weight: 200;
+    padding: 1%;
+    margin-left: -4%;
+}
+#title {
+    padding: 10%;
+    font-family: 'Teko', sans-serif;
+}
+#title p {
+    color: white;
+    text-align: center;
+    padding: 1%;
+    font-weight: lighter;
+}
+#title button {
+    margin-left: 40%;
+    margin-right: 50%;
+    width: 20%;
+    padding-left: 2%;
+    padding-right: 2%;
+    font-size: 0.8em;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+}
+#row-2 {
+    width: 100%;
+    height: auto;
+}
+div#highlighted-right {
+    width: 50%;
+    float: right;
+    background-color: #FF0047;
+    height: 37.2em;
+}
+div#highlighted-left {
+    background-color: white;
+    float: left;
+    width: 50%;
+    height: 37.2em;
+}
+#text {
+    padding: 15%;
+    color: white;
+    font-size: 0.7em;
+    margin-top: 20%;
+}
+#history .button {
+    color: white;
+    background-color: #FF0047;
+    padding: 1% 4%;
+    text-decoration: none;
+    margin-left: 8em;
+}
+.row {
+    display: block;
+}
+#history {
+    width: 50%;
+    display: block;
+    float: left;
+    background-color: white;
+    height: 39em;
+}
+#history h2 {
+    margin: 2em 3em 0 3em;
+}
+#history p {
+    padding: 0 9em;
+    margin: 2em auto;
+    font-size: 0.9em;
+    margin-right: 4em;
+}
+#sage {
+    display: block;
+    width: 50%;
+    float: right;
+    background-color: white;
+    height: 39em;
+}
+#sage img {
+    width: 55%;
+    align-content: center;
+    margin: 2em 25%
+}
+#blank {
+    height: 12em;
+}
+#blank {
+    width: 100%;
+}
+#blank #gray1 {
+    width: 24%;
+    float: left;
+    height: 12em;
+}
+#blank #gray2 {
+    height: 50%;
+    background-color: #352B2F;
+    height: 12em;
+}
+#blank #grey1 {
+    width: 30% height: 50%;
+    background-color: #3A3033;
+    float: right;
+    height: 12em;
+}
+#projects p {
+    padding: 2em;
+    padding-bottom: 2em;
+    margin-left: 3em;
+}
+#projects h2 {
+    color: black;
+    text-align: left;
+    margin-left: 4em;
+}
+#discover {
+    background-color: white;
+}
+#discover p {
+    margin-left: 3em;
+    margin-bottom: 0em;
+}
+#discover #button {
+    padding: 0 8%;
+    margin: 3em 5em 0 4em;
+    background-color: #FF0047;
+    height: 2.5em;
+    color: white;
+}
+.row-3 {
+    height: 44em;
+}
+.row-3 .images {
+    margin: auto;
+    width: 100%;
+    background-color: white;
+}
+.image-4 {
+    float: right;
+}
+.image-2 {
+    float: left;
+}
+.image-3 {
+    float: center;
+}
+.images img {
+    height: 5em;
+    width: 4em;
+    margin-right: 10em;
+}
+.col.col-4.columns {
+    background-color: white;
+}
