--- a/style.css
+++ b/style.css
@@ -227,20 +227,20 @@ div#highlighted-left {
     height: 12em;
     background-color: #352B2F;
     float: right;
-    width: 33%;
+    width: 32%;
     margin: 0;
 }
 .blank3 {
     height: 12em;
     background-color: #352B2F;
     float: left;
-    width: 33%;
+    width: 32%;
     margin: 0;
 }
 #discover {
     background-color: white;
     width: 50%;
-    padding: 0 0 1% 0;
+    padding: 0 0 0.5% 0;
 }
 #discover p,
 button {
@@ -252,4 +252,10 @@ button {
     padding: 2%;
     border: solid 0 transparent;
     color: white;
+}
+.infinity {
+    background-color: #FF0047;
+    float: right;
+    width: 50%;
+    margin: 0;
 }
