--- a/css/app.css
+++ b/css/app.css
@@ -40,3 +40,11 @@ li {
   padding-left: 10px;
 
 }
+
+.grey {
+    background-color: grey;
+    padding: 0;
+    color: aliceblue;
+    text-align: center;
+    align-content: center;
+}
