show more artlc

--- a/css/app.css
+++ b/css/app.css
@@ -65,3 +65,9 @@ li {
     align-content: center;
     text-align: center;
 }
+
+.show {
+    text-align: center;
+    align-content: center;
+    text-decoration: underline
+}
