--- a/css/app.css
+++ b/css/app.css
@@ -20,6 +20,7 @@ li {
 
 .right{
     height: 10em;
+    padding-top: 20%;
     background-color:red;
 }
 
@@ -33,8 +34,9 @@ li {
 }
 
 .left {
-    padding: 0;
-    padding-left: 10%
+    padding-top: 5%;
+    padding-left: 10%;
+    padding-bottom: 5%
 }
 
 .middlerow {
@@ -105,4 +107,8 @@ li {
 
 .footer {
     border-top: 1em solid white;
+}
+
+.right {
+    padding-top: 60%
 }
