--- a/css/app.css
+++ b/css/app.css
@@ -1,252 +1,38 @@
-.row.row {
-    max-width: 100%;
-}
-div#container {
-    width: 100%;
-    display: block;
-}
-div .header {
-    background-color: #3A3033;
-    width: 100%;
-}
-img {
-    width: 6%;
-}
-#nav {
-    display: inherit;
-    margin-left: 25%;
-    margin-left: 25%;
-    margin-top: -7%;
-}
-li a: hover {
-    border: solid 2px white;
-}
-li {
-    display: inline-block;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 0;
-    margin-top: 0;
-}
-ul li a {
-    list-style: none;
-    color: #E2D9DC;
-    display: inline-block;
-    text-decoration: none;
-    font-size: 0.8em;
-}
 body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    display: block;
-    background-color: #3A3033;
-}
-#icons {
-    margin-top: -3%;
-}
-#icons li {
-    color: rgba(255, 255, 255, 0.51);
-    float: right;
-    border: solid 1px transparent;
-    padding: 1%;
-}
-h1 {
-    font-size: 3em;
-    color: white;
-    text-align: center;
-    font-weight: 200;
-    padding: 1%;
-    margin-left: -4%;
-}
-#title {
-    padding: 10%;
-    font-family: 'Teko', sans-serif;
-}
-#title p {
-    color: white;
-    text-align: center;
-    padding: 1%;
-    font-weight: lighter;
-}
-#title button {
-    margin-left: 40%;
-    margin-right: 50%;
-    width: 20%;
-    padding-left: 2%;
-    padding-right: 2%;
-    font-size: 0.8em;
-    padding-top: 0.5%;
-    padding-bottom: 0.5%;
-}
-#row-2 {
-    width: 100%;
-    height: auto;
-}
-div#highlighted-right {
-    width: 50%;
-    float: right;
-    background-color: #FF0047;
-    height: 37.2em;
-}
-div#highlighted-left {
-    background-color: white;
-    float: left;
-    width: 50%;
-    height: 37.2em;
-}
-#text {
-    padding: 15%;
-    color: white;
-    font-size: 0.7em;
-    margin-top: 20%;
-}
-#history .button {
-    color: white;
-    background-color: #FF0047;
-    padding: 1% 4%;
-    text-decoration: none;
-    margin-left: 8em;
-}
-.row {
-    display: block;
-    max-width: 100%;
-}
-#history {
-    width: 50%;
-    display: block;
-    float: left;
-    background-color: white;
-    height: 39em;
-}
-#history h2 {
-    margin: 2em 3em 0 3em;
-}
-#history p {
-    padding: 0 9em;
-    margin: 2em auto;
-    font-size: 0.9em;
-    margin-right: 4em;
-}
-#sage {
-    display: block;
-    width: float: right;
-    background-color: white;
-    height: 39em;
-}
-#sage img {
-    width: 55%;
-    align-content: center;
-    margin: 2em 25%
-}
-#blank {
-    height: 12em;
-}
-#blank #gray1 {
-    width: 33.33%;
-    float: left;
-    height: 12em;
-    background-color: #3A3033;
-}
-#blank #gray2 {
-    height: 50%;
-    background-color: #352B2F;
-    height: 12em;
-    width: 66.66%;
-}
-#blank #grey1 {
-    height: 50%;
-    background-color: #3A3033;
-    float: right;
-    height: 12em;
-    width: 33.33%;
-    /*    margin-top: -39.2%;*/
-}
-#projects p {
-    padding: 2em;
-    padding-bottom: 2em;
-    margin-left: 3em;
-}
-#projects h2 {
-    color: black;
-    text-align: left;
-    margin-left: 4em;
-}
-#discover {
-    background-color: white;
-}
-#discover p {
-    margin-left: 3em;
-    margin-bottom: 0em;
-}
-#discover #button {
-    padding: 0 8%;
-    margin: 3em 5em 0 4em;
-    background-color: #FF0047;
-    height: 2.5em;
-    color: white;
-}
-.row-3 {
-    height: 44em;
-}
-.row-3 .images {
-    margin: auto;
-    width: 100%;
-    background-color: white;
-    align-content: center;
-}
-.col.col-4.columns {
-    background-color: white;
+	padding: 0;
+	margin: 0;
 }
 
-/*
-.highlighted-text {
-    background-color: white;
-    width: 50%;
+.row.row {
+	padding: 0;
+	margin: 0;
+	max-width: 100%;
 }
-.highlighted-text p {
-    margin-left: 5%;
-    font-size: 20px;
-    padding-top: 5%;
-    color: black;
-}
-*/
 
-#head {
-    font-size: 40px;
-    margin-left: 5%;
-    padding-top: 0;
-    margin-bottom: 0%;
-    width: 50%;
+ul li {
+	list-style: none;
+	display: inline-block;
+	font-size: 0.8em;
 }
-#discover {
-    background-color: white;
-    width: 50%;
-    padding: 0 0 0.5% 0;
+
+.landing {
+	background-color: #362D30;
+	height: 100vh;
 }
-#discover p,
-button {
-    margin-left: 5%;
-    margin-top: 2%;
-    text-align: left;
+
+.landing p {
+	color: #888385;
+	text-align: center;
 }
-#discover button {
-    background-color: #FF0047;
-    padding: 2%;
-    border: solid 0 transparent;
-    color: white;
+
+.landing h1 {
+	color: white;
 }
-.highlighted-right {
-    background-color: #FF0047;
-    float: right;
-    width: 50%;
-    margin: 0;
-    margin-left: 3%;
-    height: auto;
+
+li a {
+	color: #888385;
 }
-.#text h1 {
-    font-size: 3em;
-    color: white;
-    font-weight: 200;
-    padding: 1%;
+
+.build {
+	margin-top: 20vh;
 }
