--- a/css/app.css
+++ b/css/app.css
@@ -147,7 +147,7 @@ p.small {
 }
 
 .header__nav-links a {
-	color: black;
+	color: #efefef;
 	opacity: .5;
 	display: block;
 	height: 4.375rem;
@@ -191,7 +191,7 @@ p.small {
 	display: flex;
 }
 
-.header__social a img {
+.header__social a img:hover {
 	margin-right: 1.125rem;
 }
 
@@ -629,6 +629,7 @@ p.small {
 .featured__image-block img {
 	float: left;
 	width: 33.33%;
+	height: 200px;
 }
 
 @media screen and (max-width: 68.75rem) {
@@ -868,8 +869,7 @@ p.small {
 .cta {
 	padding: 2.8125rem 0.9375rem 3.5rem 0.9375rem;
 	text-align: center;
-	background-color: #2c2c2c;
-	background: url("../img/ctabackground.png");
+	background: #362D30;
 	background-position: center center;
 	background-repeat: none;
 	background-size: cover;
@@ -1122,6 +1122,7 @@ p.small {
 
 .quotes .logos a:hover {
 	background: #e8504f;
+	transition: 1s;
 }
 
 .quotes .logos a img {
@@ -1245,6 +1246,7 @@ p.small {
 
 .social__row a:hover {
 	background: #e8504f;
+	transition: 1s;
 }
 
 .social__row a i {
